correct css "icon-delete" overlapping in afStudio.css with filetree "icon-delete", in afStudio.css "icon-delete" was renamed in "afs-icon-delete"

--- a/web/css/afStudio.css
+++ b/web/css/afStudio.css
@@ -9,7 +9,7 @@
 
 .icon-add{background:url('/appFlowerStudioPlugin/images/add.png') no-repeat center left !important;}
 .icon-edit{background:url('/appFlowerStudioPlugin/images/pencil.png') no-repeat center left !important;}
-.icon-delete{background:url('/appFlowerStudioPlugin/images/delete.png') no-repeat center left !important;}
+.afs-icon-delete{background:url('/appFlowerStudioPlugin/images/delete.png') no-repeat center left !important;}
 .icon-folder{background: url('/appFlowerStudioPlugin/images/folder.gif') no-repeat 0 0 !important;}
 .icon-folder-open{background: url('/appFlowerStudioPlugin/images/folder-open.pgif') no-repeat 0 0 !important;}
 .icon-obj{background: url('/appFlowerStudioPlugin/images/application.png') no-repeat 0 0 !important;}
